# cloud_companion_public

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  _config.yml
.github/workflows/: installer.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  FetchQaterial.cmake  PVS-Studio.cmake  tools.cmake
docs/: Building dependencies.txt  Docker & Kubernetes HelloWorld.txt  Qt build.txt  build_android.txt  build_ios.txt  build_wasm.txt  iOS_shared_build.patch
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
include/actions/: Action.hpp  ActionDiscovery.hpp
include/actions/implementations/: CheckConnectivity.hpp  OpenUrl.hpp  RunApp.hpp
include/authentication/: CredentialsTypeEnum.hpp
include/kubernetes/: KubernetesClient.hpp  PodInfo.hpp  WatchOperation.hpp
include/logging/: LogParserEnum.hpp  Logger.hpp
include/solutions/: Solution.hpp  SolutionsRepo.hpp
include/ssh/: Ssh.hpp
source/actions/: Action.cpp  ActionDiscovery.cpp.in
source/actions/implementations/: CheckConnectivity.cpp  OpenUrl.cpp  RunApp.cpp
source/kubernetes/: KubernetesClient.cpp
source/logging/: Logger.cpp
source/solutions/: Solution.cpp  SolutionsRepo.cpp
source/ssh/: Ssh.cpp
standalone/: CMakeLists.txt  CMakePresets.json  PVS-Studio.cfg  solutions.json  vcpkg-configuration.json  vcpkg.json
standalone/include/authentication/: AuthUtils.hpp  Okta.hpp
standalone/include/docker/: DockerClient.hpp
standalone/include/ec2/: Ec2.hpp  InstanceInfo.hpp
standalone/include/ecr/: Ecr.hpp  EcrImageInfo.hpp
standalone/include/eks/: Eks.hpp
standalone/include/models/: EcrListModel.hpp  EksPodsTableModel.hpp  InstancesTableModel.hpp
standalone/include/ssh/: SshHandler.hpp
standalone/include/sts/: StsClient.h
standalone/qml/: Import.qml
standalone/qml/CloudCompanionStandalone/: Main.qml  StatusView.qml  qmldir
standalone/qml/CloudCompanionStandalone/Pages/: CredentialsPage.qml  DeployPage.qml  DockerPage.qml  Ec2Page.qml  EcrPage.qml  EksPage.qml  qmldir
standalone/source/: main.cpp
standalone/source/authentication/: AuthUtils.cpp  Okta.cpp
standalone/source/docker/: DockerClient.cpp
standalone/source/ec2/: Ec2.cpp
standalone/source/ecr/: Ecr.cpp
standalone/source/eks/: Eks.cpp
standalone/source/models/: EcrListModel.cpp  EksPodsTableModel.cpp  InstancesTableModel.cpp
standalone/source/ssh/: SshHandler.cpp
standalone/source/sts/: StsClient.cpp
test/: CMakeLists.txt
test/source/: cloud_companion.cpp
